# HALfred

./: Cargo.toml  README.md  log.txt  output.hex  qemu-log.txt
src/: atmega328_usart.rs  cortex_m3_usart.rs  gpio.rs  i2c.rs  main.rs  memory.x  spi.rs  usart.rs
