[package]
name = "halfred"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic ="abort"

[profile.release]
panic ="abort"

[profile.test]
panic ="abort"

[target.riscv32imac-unknown-none-elf.dependencies]
hifive1 = { version = "0.13.0", features = ["board-hifive1"] }
panic-halt = "1.0.0"
riscv = "0.12.1"
riscv-rt = "0.13.0"

[target.avr-unknown-gnu-atmega328.dependencies]
cortex-m-rt = "0.7.5"




